# Bug-Squash-Game

./: BugSquashApp.cpp  BugSquashApp.h  CMakeLists.txt  README.md  main.cpp  pch.h
BugSquashLib/: Bug.cpp  Bug.h  BugGarbage.cpp  BugGarbage.h  BugNuke.cpp  BugNuke.h  BugNukeVisitor.cpp  BugNukeVisitor.h  BugNull.cpp  BugNull.h  BugRedundancy.cpp  BugRedundancy.h  BugSquash.cpp  BugSquash.h  BugSquashView.cpp  BugSquashView.h  BugStateVisitor.cpp  BugStateVisitor.h  CMakeLists.txt  Code.cpp  Code.h  CodeDlg.cpp  CodeDlg.h  FatBugSquashVisitor.cpp  FatBugSquashVisitor.h  FatGarbageBug.cpp  FatGarbageBug.h  FatNullBug.cpp  FatNullBug.h  Feature.cpp  Feature.h  GarbageBug.cpp  GarbageBug.h  Images.cpp  Images.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  (+15 more)
Tests/: BugGarbageTest.cpp  BugNukeTest.cpp  BugNullTest.cpp  BugTest.cpp  BullRedundancyTest.cpp  CMakeLists.txt  CodeTest.cpp  ItemTest.cpp  LoadTest  Loadtest.cpp
Tests/test-data/: garbage-bug-1.xml  garbage-bug-2.xml  garbage-bug-3.xml  null-bug-1.xml  null-bug-2.xml
data/: BugNukeTest.xml  kyletestlevel.xml  level0.xml  level1.xml  level2.xml  level3.xml
